@@ -1,20 +1,37 @@
 <?xml version="1.0"?>
-<RDF:RDF xmlns:em="http://www.mozilla.org/2004/em-rdf#"
-         xmlns:NC="http://home.netscape.com/NC-rdf#"
-         xmlns:RDF="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
-  <RDF:Description RDF:about="rdf:#$U.OeR"
-                   em:id="{ec8030f7-c20a-464f-9b0e-13a3a9e97384}"
-                   em:minVersion="1.5"
-                   em:maxVersion="2.0.0.*" />
-  <RDF:Description RDF:about="urn:mozilla:install-manifest"
-                   em:id="FirePHPExtension@firephp.org"
-                   em:version="0.0.6"
-                   em:type="2"
-                   em:name="FirePHP"
-                   em:description="PHP Developer Tool"
-                   em:creator="Christoph Dorn"
-                   em:homepageURL="http://www.firephp.org/"
-                   em:updateURL="http://www.firephp.org/FirefoxExtensionUpdateCheck?id=%ITEM_ID%">
-    <em:targetApplication RDF:resource="rdf:#$U.OeR"/>
-  </RDF:Description>
-</RDF:RDF>
+
+<RDF xmlns="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+     xmlns:em="http://www.mozilla.org/2004/em-rdf#">
+
+  <Description about="urn:mozilla:install-manifest">
+    <em:id>FirePHPExtension@firephp.org</em:id>
+    <em:version>0.0.6</em:version>
+    <em:type>2</em:type>
+
+    <!-- Firefox -->
+    <em:targetApplication>
+      <Description>
+        <em:id>{ec8030f7-c20a-464f-9b0e-13a3a9e97384}</em:id>
+        <em:minVersion>1.5</em:minVersion>
+        <em:maxVersion>3.0.0.*</em:maxVersion>
+      </Description>
+    </em:targetApplication>
+
+    <!-- Flock -->
+    <em:targetApplication>
+      <Description>
+        <em:id>{a463f10c-3994-11da-9945-000d60ca027b}</em:id>
+        <em:minVersion>0.5</em:minVersion>
+        <em:maxVersion>1.0.*</em:maxVersion>
+      </Description>
+    </em:targetApplication>
+
+    <em:name>FirePHP</em:name>
+    <em:description>Firebug Extension for AJAX Development</em:description>
+    <em:creator>Christoph Dorn</em:creator>
+    <em:homepageURL>http://www.firephp.org/</em:homepageURL>
+    <em:updateURL>http://www.firephp.org/FirefoxExtensionUpdateCheck?id=%ITEM_ID%</em:updateURL>
+    <em:updateKey>MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQDP3d1lWrv680cl1DKDgse1IHeMgF0iLq5fiNKCdCkSWXbzQplSCNdWHUi2mZc2QnYyb4eOUlV7rTOUj1qNJJ9YOb5kINNmzrmUTF3Apf5339zn4lda+wo71DWqbPBKZxb/Khp1gk/97yi8i6VfWmZElRo5Ahlme2XhUwE8lUmQVwIDAQAB</em:updateKey>
+
+  </Description>
+</RDF>
